--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,5 @@ $RECYCLE.BIN/
 .DS_Store
 D-Sante/packages/
 D-Sante/D-Sante/packages.config
+D-Sante/D-Sante/packages.config
+D-Sante/D-Sante/packages.config
